--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
         <span>secomds</span>
       </div>
     </div>
+    <footer>
+      <h3>Created By Aluko OluwaDemilade </h3>
+    </footer>
   </body>
 </html>
